[package]
name = "thermal"
version = "0.1.0"
authors = ["sixleaveakkm <sixleaveakkm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i2cdev = "0.4.4"
serde = { version = "1.0.110", features = ["derive"]}

amg88xx = { git = "https://github.com/sixleaveakkm/rust-amg88xx.git"}
serde_json = "1.0"

websocket = "0.24.0"
openssl = { version = "0.10.29", features = ["vendored"] }
[features]
